[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Wolf 01_idle (16x16).png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Torch.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7.5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle Down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.0
height = 4.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="Sword" type="Sprite" parent="."]
position = Vector2( 12, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="DisplayUsername" type="Label" parent="."]
margin_left = -35.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = -36.0
text = "Anonymous"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle Down"
"anims/Idle Down" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.3, 0.3 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 14, 0 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -12, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 12, 4 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="DisplayHealth" type="Label" parent="."]
margin_left = -23.0
margin_top = 9.0
margin_right = 35.0
margin_bottom = 23.0
text = "Health: 3"

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
